Uso de Ajax en formulario

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -99,3 +99,5 @@ endpoints.metrics.sensitive=false
 endpoints.metrics.enabled=true
 endpoints.shutdown.enabled=false
 endpoints.trace.enabled=true
+
+cl.mineduc.induccion.api.region.buscarregiones=http://dockerdesa.mineduc.cl/api-sige-common/V1/regiones
